# keras-tuner-alpha

./: .gitignore  .gitmodules  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README  README.md  pyproject.toml  requirements.txt  setup.py  setup123.py
benchmark/: kerashub.py  maxtext_native.py  maxtext_via_kithara.py
cli/: main.py  multihost.py
debug/: maxtext_load_hf_checkpoint.py
docs/: Makefile  README.md  requirements.txt
docs/source/: .about_kithara.rst.swp  api.rst  checkpointing.rst  conf.py  datasets.rst  ddp.rst  dws_flex_start.rst  examples.rst  finetuning_guide.rst  getting_tpus.rst  index.rst  installation.rst  kithara.data.rst  kithara.dataloader.rst  kithara.distributed.rst  kithara.preprocessor.rst  kithara.trainer.rst  lora.rst  models.rst  observability.rst  optimizations.rst  packing.rst  pretraining.rst  quickstart.rst  scaling_with_ray.rst  serve_with_vllm.rst  sft.rst  troubleshooting.rst
docs/source/api/: kithara.dataset_api.rst  kithara.model_api.rst  kithara.trainer_api.rst
docs/source/basic_examples/: full_param_finetuning_example.rst
docs/source/installation/: .tpu_gke.rst.swp  tpu_gke.rst  tpu_qr.rst  tpu_vm.rst
examples/: example_datasets.py  gemma_9b_example.py  hf_gemma_example.py  hf_gemma_sft_example.py  kithara_demo.ipynb  maxtext_default_example.py  maxtext_example.py
examples/multihost/ray/TPU/: quick_start.py  (+8 more)
examples/ray/: cluster.yaml  hf_gemma_example_via_ray.py  maxtext_example_via_ray.py  submit_ray_job.py
examples/ray/GPU/: cluster.yaml
examples/ray/TPU/: cluster.yaml  hf_gemma_example_via_ray.py  hf_gemma_sft_example_via_ray.py  maxtext_example_via_ray.py
examples/singlehost/: continued_pretraining_example.py  full_finetuning_example.py  hf_gemma_example.py  hf_gemma_sft_example.py  maxtext_example.py  maxtext_inference.py  orbax_test.py  quick_start.py  sft_lora_example.py  sft_lora_example.yaml
keras_tuner/: __init__.py
keras_tuner/callbacks/: __init__.py  checkpoint_manager.py  checkpointer.py
keras_tuner/checkpointing/: checkpointing.py
keras_tuner/common/: utils.py
keras_tuner/converter/: maxtext.py
keras_tuner/dataset/: __init__.py  dataloader.py  split.py
keras_tuner/examples/: gemma_9b_example.py  hf_gemma_example.py  maxtext_default_example.py
keras_tuner/model/: __init__.py  model.py  temp.py
keras_tuner/model/converter/: maxtext.py
keras_tuner/model/sharding/: __init__.py  _data_sharding.py  maxtext.py  strategy.py  utils.py
keras_tuner/observability/: __init__.py  profiler.py
keras_tuner/preprocessor/: __init__.py  continued_pretraining_processor.py  maxtext_continued_pretraining_processor.py  preprocessor.py  protos.py  sft_processor.py  test.py  utils.py
keras_tuner/sharding/: __init__.py  _data_sharding.py  _layout.py  _mesh.py  maxtext.py  strategy.py  utils.py
keras_tuner/sharding/models/: __init__.py  gemma.py
keras_tuner/trainer/: fsdp_trainer.py  maxtext_utils.py  model_converter.py  preprocessing.py  trainer.py  utils.py
keras_tuner/trainer/sharding/: __init__.py  gemma_fsdp.py  maxtext_sharding.py  sharding.py  utils.py
kithara/: __init__.py
kithara/callbacks/: __init__.py  checkpointer.py  profiler.py
kithara/config/: README.md  config.py  default.yaml  launcher.py  pyconfig.py
kithara/config/templates/: continued_pretraining.yaml  sft.yaml  sft_lora.yaml
kithara/dataset/: __init__.py  dataloader.py  dataset.py  packed_dataset.py  sft.py  text_completion.py  utils.py
kithara/distributed/: __init__.py
kithara/distributed/data/: __init__.py  split.py
kithara/distributed/sharding/: __init__.py  _data_sharding.py  _layout.py  _mesh.py  maxtext.py  strategy.py  utils.py
kithara/model/: README.md  __init__.py  model.py  supported_models.py
kithara/model/hf_compatibility/: __init__.py  model_configs.py  shape_mapping.py  to_huggingface.py
kithara/model/kerashub/: __init__.py  keras_hub_model.py
kithara/model/maxtext/: __init__.py  conversion_utils.py  maxtext_model.py
kithara/model/sharding/: _layout.py  _mesh.py  maxtext.py
kithara/preprocessor/: __init__.py  preprocessor.py  protos.py
kithara/trainer/: __init__.py  trainer.py
kithara/utils/: gcs_utils.py  logging_utils.py  safetensor_utils.py  torch_utils.py  tree_utils.py
kubernetes/: single-host.yaml
my-calculator/: package-lock.json  package.json  tailwind.config.js  tpu-calculator.tsx
my-calculator/vite-project/: package-lock.json  package.json
oos/docs/: README.md
oos/docs/source/: api.rst  conf.py  kithara.data.rst  kithara.model.rst  kithara.trainer.rst
orchestration/: README.md
perf/: colab_example.py  kerashub.py  kerashub_singlehost.py  maxtext_native.py  maxtext_via_kithara.py
ray/: README.md  submit_job.py
ray/GPU/: cluster.yaml  find_devices.py
ray/TPU/GCE/: cluster.yaml  cluster_128.yaml  cluster_32.yaml
ray/TPU/GKE/: Dockerfile  multi-host.yaml
ray/TPU/QR/: cluster.yaml  qr_worker_startup_script.sh
src/trainer/: gemma_9b_example.py  trainer.py
tests/: README.md  test_utils.py
tests/callbacks/: checkpointer.py  checkpointer_kerashub.py  checkpointer_maxtext.py  test_orbax_checkpointer.py
tests/dataset/: test_dataloader_creation.py  test_dataset_creation.py  test_dataset_packing.py  utils.py
tests/model/: test_prompt.py  utils.py
tests/model/kerashub/: inference.py  test_creation.py  test_inference.py
tests/model/maxtext/: inference.py  test_creation.py  test_inference.py
tests/model/models/: utils.py
tests/trainer/: test_sft_e2e.py  test_trainer_creation.py
(+65 files in other folders)
