[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kithara"
description = "LLM post-training library"
version = "0.0.7"
readme = "README.md"
license = { file = 'LICENSE' }
authors = [{ name = 'Kithara Authors' }]
requires-python = ">= 3.11"
dependencies = [
        "flax>=0.7.0",
        "datasets",
        "huggingface-hub",
        "keras>=3.8.0",
        "transformers>=4.45.1",
        "keras-hub>=0.18.1",
        "google-api-python-client",
        "google-auth-httplib2",
        "google-auth-oauthlib",
        "ray[default]==2.40.0",
        "jax[cpu]",
        "peft",
        "hf_transfer",
        "tabulate",
        # MaxText dependencies
        "aqtp",
        "grain-nightly",
        "orbax-checkpoint>=0.10.3",
        "google-cloud-logging",
        "tensorboardx",
        "ml-collections",
        "tensorflow_datasets",
        "sentencepiece",
        "tiktoken",
        "cloud-accelerator-diagnostics",
        "cloud-tpu-diagnostics",
        "ml-goodput-measurement",
        "google-cloud-monitoring",
]

[project.optional-dependencies]
tpu = ["jax[tpu]", "torch==2.4.0+cpu"]
gpu = ["jax[cuda]", "torch==2.4.0"]
cpu = ["jax[cpu]", "torch==2.4.0"]
dev = [
        "twine",
        "flit",
        "sphinx==7.1.2",
        "sphinx-autobuild",
        "sphinx-rtd-theme",
]

[project.scripts]
kithara = "cli.main:main"

[project.entry-points."kithara.commands"]
multihost = "cli.multihost:main"


[tool.flit.module]
name = "kithara"

[project.urls]
Homepage = 'https://github.com/wenxindongwork/keras-tuner-alpha'
Repository = 'https://github.com/wenxindongwork/keras-tuner-alpha'
Documentation = "https://kithara.readthedocs.io/en/latest/index.html"

[tool.flit.sdist]
exclude = [
        "kithara/model/maxtext/maxtext/MaxText/test_assets/",
        "**/*.Dockerfile",
]

[tool.flit.external-data]
directory = "cli" 
